--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               >
                 <div class="fish-block absolute">
                   <img
-                    src="./assets/img/ball.png"
+                    src="./assets/img/gem.png"
                     style="height: 36px; margin-left: 4px"
                     alt=""
                   />
