--- a/index.html
+++ b/index.html
@@ -53,12 +53,19 @@
                 </div>
                 <p class="wave-balance">1</p>
               </div>
+              <div class="dropdown">
+                <button class="dropbtn">Import wallet</button>
+                <div id="myDropdown" class="dropdown-content">
+                  <p>Import wallet</p>
+                  <p>Create new wallet</p>
+                </div>
+              </div>
               <div
                 class="right flex flex-row justify-center items-center item-bl-2 relative cursor-pointer"
               >
                 <div class="fish-block absolute">
                   <img
-                    src="./assets/img/gem.png"
+                    src="./assets/img/ball.png"
                     style="height: 36px; margin-left: 4px"
                     alt=""
                   />
@@ -435,7 +442,6 @@
         </div>
       </section>
     </div>
-  
   </div>
   </body>
 </html>
