--- a/index.html
+++ b/index.html
@@ -445,6 +445,7 @@
     new spine.SpinePlayer("player-container", {
       jsonUrl: "assets/Dragon_Skin.json",
       atlasUrl: "assets/Dragon_Skin.atlas",
+      animation: "Idle2"
     });
   </script>
 </html>
