--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         style="--16b6b170: 73px; --01be8219: 300px"
       >
         <div class="block-data h-full">
-          <div id="player-container" style="width: 640px; height: 480px;"></div>
+          <div id="player-container" class="player-container"></div>
           <div class="head flex flex-col justify-between relative">
             <div class="flex item-bl-1 flex-row items-center">
               <div class="left relative">
