--- a/index.html
+++ b/index.html
@@ -445,7 +445,8 @@
     new spine.SpinePlayer("player-container", {
       jsonUrl: "assets/Dragon_Skin.json",
       atlasUrl: "assets/Dragon_Skin.atlas",
-      animation: "Idle2"
+      animation: "Idle2",
+      backgroundColor : "#ff00ffff"
     });
   </script>
 </html>
