--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
       jsonUrl: "assets/Dragon_Skin.json",
       atlasUrl: "assets/Dragon_Skin.atlas",
       animation: "Idle2",
-      backgroundColor : "#00000080"
+      backgroundColor : "rgb(0, 0, 0, 0.5)"
     });
   </script>
 </html>
