--- a/index.html
+++ b/index.html
@@ -446,7 +446,20 @@
       jsonUrl: "assets/Dragon_Skin.json",
       atlasUrl: "assets/Dragon_Skin.atlas",
       animation: "Idle2",
-      backgroundColor : "rgb(0, 0, 0, 0.5)"
+      premultipliedAlpha: false,
+      showControls: false,
+      backgroundColor: "#00000000",
+      viewport: {
+    x: 0,
+    y: 0,
+    width: 300,
+    height: 300,
+    padLeft: "5%",
+    padRight: "5%",
+    padTop: "5%",
+    padBottom: "5%"
+ }
     });
+    
   </script>
 </html>
