--- a/index.html
+++ b/index.html
@@ -448,17 +448,7 @@
       animation: "Idle2",
       premultipliedAlpha: false,
       showControls: false,
-      backgroundColor: "#00000080",
-      viewport: {
-    x: 0,
-    y: 0,
-    width: 300,
-    height: 300,
-    padLeft: "5%",
-    padRight: "5%",
-    padTop: "5%",
-    padBottom: "5%"
- }
+      backgroundColor: "#ffffff",
     });
     
   </script>
