--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
       animation: "Idle2",
       premultipliedAlpha: false,
       showControls: false,
-      backgroundColor: "#ffffff",
+      backgroundColor: "#ff00ffff",
     });
     
   </script>
