--- a/index.html
+++ b/index.html
@@ -449,6 +449,7 @@
       premultipliedAlpha: false,
       showControls: false,
       backgroundColor: "#ff00ffff",
+      opacity: 0.5
     });
     
   </script>
