--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
         class="main-wrapper-background main-wrapper"
         style="--16b6b170: 73px; --01be8219: 300px"
       >
-      <div id="player-container" class="player-container"></div>
+      
+      <div  class="egg-backdrop" style="">
+        <div id="player-container" class="player-container"></div>
+      </div>
         <div class="block-data h-full">
           <div class="head flex flex-col justify-between relative">
             <div class="flex item-bl-1 flex-row items-center">
