--- a/index.html
+++ b/index.html
@@ -451,8 +451,7 @@
       animation: "Idle2",
       premultipliedAlpha: false,
       showControls: false,
-      backgroundColor: "#ff00ffff",
-      opacity: 0.5
+      backgroundAlpha: 0
     });
     
   </script>
